# simple_gl_vk_interprocess

./: README.md
src_gl_client/: CMakeLists.txt  cube.frag  cube.vert  main.cpp  shader.frag  shader.vert
src_vk_render/: CMakeLists.txt  main.cpp  shader.vert
